# challenge

./: final_results.txt  readme.txt
churchill/src/: base.props  churchill.cpp  churchill.vcxproj  debug.props  dll.props  opt.props  point_search.cpp  point_search.def  point_search.sln  point_search.vcxproj  reference.cpp  reference.vcxproj
contestants/adams/src/: adams.sln
contestants/bizkit/: bizkit.cpp  bizkit_reloaded.cpp  bizkit_there_is_no_spoon.cpp
contestants/blessed_hammer/: blessed_hammer.sln
contestants/blessed_hammer/blessed_hammer/: ReadMe.txt  blessed_hammer.cpp  blessed_hammer.vcxproj  blessed_hammer.vcxproj.filters  stdafx.cpp  stdafx.h  tree.cpp  tree.h
contestants/by/by00/: ReadMe.txt
contestants/by/by01/: ReadMe.txt
contestants/by/by02/: ReadMe.txt
contestants/by/by05/: ReadMe.txt  cnc.cpp  cnc.sln  stdafx.cpp
contestants/by/by06/: cnc.cpp  cnc.vcxproj.filters
contestants/by/by07/: cnc.cpp  cnc.vcxproj  stdafx.h
contestants/by/by23/: ReadMe.txt
contestants/by/by321/: ReadMe.txt  cnc.cpp  cnc.sln  cnc.vcxproj  dllmain.cpp  stdafx.h
contestants/darkhorse/: darkhorse.cpp  darkhorse.vcxproj
contestants/darkwing/darkwing/: darkwing.sln
contestants/darkwing/darkwing2/: darkwing.sln
contestants/dg/DG_1/: DG_1.vcxproj  dll-main.cpp  dll-main.hpp  heap_structure.hpp  priority_kd_tree.cpp  priority_kd_tree.hpp  types.cpp  types.hpp
contestants/dg/DG_2/: DG_1.sln  DG_1.vcxproj  DG_1.vcxproj.filters  dll-main.cpp  exports.def  heap_structure.hpp  priority_kd_tree.cpp  priority_kd_tree.hpp  result_queue.cpp  result_queue.hpp  types.cpp  types.hpp
contestants/dizergin/dizergin_no1/: main.cpp  template.vcxproj
contestants/dizergin/dizergin_no2/: main.cpp  template.vcxproj
contestants/dizergin/dizergin_no3/: log.txt  main.cpp  template.vcxproj
contestants/dodo/: Makefile  solution.cpp
contestants/ftl_search/src/: CMakeLists.txt  ftl_search.cpp
contestants/ftl_search/src/lib/: CMakeLists.txt  dim.cpp  libftl_search.def  node.cpp  point_search.cpp  point_set.cpp  slice.cpp
contestants/ftl_search/src/lib/ftl_search/: dim.h  node.h  point_search.h  point_set.h  slice.h
contestants/gump/gump/: gump.c  gump.h  loadpoints.m  old.c  rectn.m
contestants/gump/gumption/: gumption.c  gumption.h
contestants/gump/gumptionaire/: gumptionaire.c  gumptionaire.h
contestants/gump/gumptionly/: gumption.c  gumption.h
contestants/gump/supergump/: gumption.c  gumption.h
contestants/nopanic/NoPanic_Fast/source/: .hg_archival.txt  CMakeLists.txt  Profiler.h  Tree.cpp  Tree.h  Tree2.cpp  Tree2.h  point_search.h  tree1x.cpp  tree2x.cpp
contestants/nopanic/NoPanic_Slow/source/: .hg_archival.txt  CMakeLists.txt  PointRange.cpp  PointRange.h  Profiler.h  Tree.cpp  Tree.h  tree1x.cpp
contestants/origin/: origin.cpp
contestants/puma/: point_search.h  puma.cpp
contestants/saber/: FastSearch.cpp  FastSearch.hpp  README.txt  compile.sh  point_search.h
contestants/sakra/: build.cmd  license.txt  point_search_sakra.cpp
contestants/serendipity-v1/: point_search.cpp  serendipity.sln  serendipity.vcxproj  serendipity.vcxproj.filters
contestants/shotgun/: Challenge.cpp  Challenge.h  main.cpp
contestants/sleepy_64/prod64/: CMakeLists.txt  data_conversion.cpp  data_conversion.h  geom.h  license.txt  readme.txt  search_amd64.cpp  search_amd64.h  tree64.cpp  tree64.h
contestants/vizpoint/: AssocVector.h  main.cpp
contestants/zaxie/: ChurchillChallenge.sln  point_search.h
contestants/zoopp/: README
test_scripts/: run_one_at_a_time.pl  run_original_challenge.sh  run_something_new.sh
(+588 files in other folders)
